fix drag margins on mobile inspector

--- a/src/Editor/_editor.scss
+++ b/src/Editor/_editor.scss
@@ -295,6 +295,5 @@ body {
 
 .mobile-reflex-splitter {
   height: 15px !important;
-  margin: 0 0 !important; 
   border: 3px solid black !important;
 }
